--- a/main.html
+++ b/main.html
@@ -30,10 +30,13 @@
           />
           <div class="bio">
             <p class="bio-intro">
-              Hi there! welcome to my website, my name is Dabirichi Blaise
+              Hi there! welcome to my portfolio, my name is Dabirichi Blaise
               Anokwuru and I am a quantitatively driven Computer Science student
-              at Portland State University. I am passionate about learning and
-              leveraging technology to solve real world problems.
+              at Portland State University with an expected graduation for Fall
+              2025. I am passionate about learning new technolgies, creating and
+              planning new ideas for software, learning from other developers
+              and leveraging technology to solve real world problems, while
+              still having fun with software development!
             </p>
             <p>
               Currently I work as an IT Support Technician at the Office of
@@ -115,6 +118,7 @@
                   <li>Git/GitHub</li>
                   <li>VSCode & Vim</li>
                   <li>Jira</li>
+                  <li>Make</li>
                 </ul>
               </div>
               <div class="skill-category">
@@ -129,12 +133,114 @@
         </div>
       </section>
 
-      <section id="projects" class="section">
-        <!--Projects content-->
+      <section id="projects" class="container">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+          <!--First Project-->
+          <div class="project-card">
+            <h3>blaissh - Custom Shell Implementation</h3>
+            <div class="project-content">
+              <div class="project-description">
+                <p>
+                  A custom Unix shell implementation written in C that provides
+                  command-line interface functionality with features including:
+                </p>
+                <ul>
+                  <li>Command execution with pipe support</li>
+                  <li>Input/Output redirection</li>
+                  <li>Command history tracking</li>
+                  <li>Built-in commands (cd, cwd, echo)</li>
+                  <li>Signal handling</li>
+                </ul>
+              </div>
+              <div class="project-links">
+                <a
+                  href="https://github.com/dabirichiblaise/blaissh"
+                  class="project-link"
+                  >Github Repository</a
+                >
+              </div>
+            </div>
+          </div>
+          <!--Second Project-->
+          <div class="project-card">
+            <h3>Frupal - Adventure Game</h3>
+            <div class="project-content">
+              <div class="project-description">
+                <p>
+                  A Python-based adventure game with a GUI where players explore
+                  a terrain-based map searching for royal diamonds. My
+                  contributions include:
+                </p>
+                <ul>
+                  <li>Core game logic implemetation</li>
+                  <li>Resource management system</li>
+                  <li>Player movement and terrain interactions</li>
+                  <li>Item and obstacle encounter systems</li>
+                </ul>
+              </div>
+              <div class="project-links">
+                <a
+                  href="https://github.com/dabirichiblaise/frupal-python-game"
+                  class="project-link"
+                  >Github Repository</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
-      <section id="contact" class="section">
-        <!--Contact content-->
+      <section id="contact" class="container">
+        <h2>Contact</h2>
+        <div class="contact-content">
+          <div class="form-container">
+            <form action="" method="post" class="contact-form">
+              <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required />
+              </div>
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required />
+              </div>
+              <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="submit-btn">Submit</button>
+                <button type="reset" class="reset-btn">Reset</button>
+              </div>
+            </form>
+          </div>
+
+          <div class="social-links">
+            <h3>Connect With Me</h3>
+            <div class="social-icons">
+              <a
+                href="https://www.linkedin.com/in/dabirichi-anokwuru-6a246830b/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i class="fab fa-linkedin"></i> Linkedin
+              </a>
+              <a
+                href="https://github.com/dabirichiblaise"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i class="fab fa-github"></i> GitHub
+              </a>
+              <a href="dabirichiblaise@gmail.com">My Email</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
