--- a/index.html
+++ b/index.html
@@ -32,27 +32,24 @@
           />
           <div class="bio">
             <p class="bio-intro">
-              Hi there! welcome to my portfolio, my name is Dabirichi Blaise
-              Anokwuru and I am a quantitatively driven Computer Science student
-              at Portland State University with an expected graduation for Fall
-              2025. I am passionate about learning new technolgies, creating and
+              Hi there! welcome to my portfolio, my name is Dabirichi Anokwuru 
+              and I am a Computer Science student attending Portland State University. 
+              I am passionate about learning new technolgies, creating and
               planning new ideas for software, learning from other developers
               and leveraging technology to solve real world problems, while
               still having fun with software development!
             </p>
             <p>
               Currently I work as an IT Support Technician at the Office of
-              Information Technology at PSU and also as a Communications
-              Assistant at Maseeh College of Engineering and Computer Science. I
-              combine both technical expertise with strong communication skills
-              to bridge the gap between complex technical concepts and practical
-              solutions.
+              Information Technology at PSU. I combine both technical expertise 
+              with strong communication skills to bridge the gap between 
+              complex technical concepts and practical solutions.
             </p>
             <p>
               With my experience with Linux systems, and programming languages
               such as C, C++ and Python and tools like Git, Visual Studio, Jira,
               I am constantly seeking opportunities to apply my skills in
-              software development and technical problem solving.
+              software development, engineering and technical problem solving.
             </p>
           </div>
         </div>
@@ -62,42 +59,69 @@
         <h2>Experience & Skills</h2>
         <div class="experience-content">
           <div class="experience-card">
-            <h3>IT Support Technician</h3>
+            <h3>Information Technology Support Technician</h3>
             <p class="company">Office of Information Technology (PSU)</p>
             <p class="duration">February 2023 - Present</p>
             <ul>
               <li>
-                Managed service delivery using Jira Software and led website
-                development projects leveraging Drupal, enhancing operational
-                efficiency and online presence.
+                Managed technical servive delivery and workflow automation using
+                JIRA, leading to a 25% reduction in ticket resolution time while 
+                handling over 30+ weekly support requests.
               </li>
               <li>
-                Provided comprehensive technical support to PSU faculty, staff,
-                and students and collaborated with team members to research and
-                resolve technology issues.
+                Provided comprehensive technical support to 2000+ PSU faculty, staff,
+                and students while maintaining a 90% first contact resolution rate.
+              </li>
+              <li>
+                Resolved 35+ MacOS/Linux and Windows system issues monthly, and devised user
+                security best practices, which led to a  37% decrease in account compromise incidents.
               </li>
             </ul>
           </div>
 
           <div class="experience-card">
-            <h3>Communications Assistant</h3>
+            <h3>Engineering Communications Assistant</h3>
             <p class="company">
               Maseeh College of Engineering and Computer Science
             </p>
-            <p class="duration">December 2022 - Present</p>
+            <p class="duration">December 2022 - March 2025</p>
             <ul>
               <li>
-                Reviewed and analyzed MCECS faculty, staff and students research
-                outputs, evaluated press releases and news stories highlighting
-                their research, and coordinated with PSU faculty to enhance
-                their research visibility through tailored social media
-                profiles.
+                Analyzed and promoted research outputs from 30+ MCECS faculty
+                members and students, helping to increase research visibility by 
+                47% through tailored media content and profiles.
               </li>
               <li>
-                Distilled and communicated complex research findings in plain
-                language to a broad audience and met regularly with the
-                Communications Manager to receive feedback, review assignments,
-                and coordinate communication strategies
+                Translated complex technical research into 30+ accessible content pieces,
+                in the form of short form content and technical articles for diverse audiences,
+                both technical and non-technical, enhancing public understanding of engineering research.
+              </li>
+              <li>
+                Leveraged Drupal CMS infrastructure to manage content life cycle operations, including
+                publishing workflows, content versioning, and content archiving across the MCECS website.
+              </li>
+            </ul>
+          </div>
+
+          <div class="experience-card">
+            <h3>Information Technology Support Engineer Intern</h3>
+            <p class="company">Blaize Energy Services LTD</p>
+            <p class="duration">June 2019 - March 2020</p>
+            <ul>
+              <li>
+                Troubleshot Windows systems and deployed business and consulting
+                software applications for 20+ organizational workstations, improving
+                engineering workflow efficiency by 20%.
+              </li>
+              <li>
+                Delivered frontline technical support to 6 field engineers for product
+                tracking software applications used in oil and gas impor/export operations,
+                ensuring seamless operations and minimal downtime.
+              </li>
+              <li>
+                Provided technical support for proprietary petroleum analysis software, used
+                by 12 petroleum engineers to track analytical information of imported petroleum
+                products, resulting in a 15% increase in data accuracy and reporting efficiency.
               </li>
             </ul>
           </div>
@@ -111,6 +135,8 @@
                   <li>C++</li>
                   <li>Python</li>
                   <li>C</li>
+                  <li>HTML/CSS</li>
+                  <li>JavaScript</li>
                 </ul>
               </div>
               <div class="skill-category">
