Updates - New Github username

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               </div>
               <div class="project-links">
                 <a
-                  href="https://github.com/dabirichiblaise/blaissh"
+                  href="https://github.com/dabirichianokwuru/blaissh"
                   class="project-link"
                   >Github Repository</a
                 >
@@ -209,7 +209,7 @@
               </div>
               <div class="project-links">
                 <a
-                  href="https://github.com/dabirichiblaise/frupal-python-game"
+                  href="https://github.com/dabirichianokwuru/frupal-python-game"
                   class="project-link"
                   >Github Repository</a
                 >
@@ -272,7 +272,7 @@
                 <i class="fab fa-linkedin"></i> Linkedin
               </a>
               <a
-                href="https://github.com/dabirichiblaise"
+                href="https://github.com/dabirichianokwuru"
                 target="_blank"
                 rel="noopener noreferrer"
               >
