--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
                 <i class="fab fa-github"></i> GitHub
               </a>
               <a
-                href="mailto:dabirichiblaise@gmail.com"
+                href="mailto:dabirichianokwuru@gmail.com"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <i class="fas fa-envelope"></i> dabirichiblaise@gmail.com
+                <i class="fas fa-envelope"></i> dabirichianokwuru@gmail.com
               </a>
             </div>
           </div>
